--- a/public/assets/login/style-login.css
+++ b/public/assets/login/style-login.css
@@ -1,10 +1,15 @@
+*{
+    font-family: sans-serif;
+}
 .container {
   width: 400px;
-  margin: 0 auto;
+  margin-top: 12.5rem  ;
+  margin-left: auto;
+  margin-right: auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin-top: 4rem;
+
 }
 
 h1 {
@@ -21,10 +26,14 @@ label {
 }
 
 input[type="email"],
+.select, textarea,
 input[type="text"],
+input[type="tel"],
+input[type="date"],
+input[type="file"],
 input[type="password"] {
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 8px;
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid #ccc;
